; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/crypto/extr_corecrypto_sha1.c_SHA1Init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/crypto/extr_corecrypto_sha1.c_SHA1Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (%struct.ccdigest_info*, i32)*, %struct.ccdigest_info* }
%struct.ccdigest_info = type { i32 }

@g_crypto_funcs = common dso_local global %struct.TYPE_2__* null, align 8
@di_ctx = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SHA1Init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.ccdigest_info*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_crypto_funcs, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 1
  %6 = load %struct.ccdigest_info*, %struct.ccdigest_info** %5, align 8
  store %struct.ccdigest_info* %6, %struct.ccdigest_info** %3, align 8
  %7 = load %struct.ccdigest_info*, %struct.ccdigest_info** %3, align 8
  %8 = load i32, i32* @di_ctx, align 4
  %9 = call i32 @ccdigest_di_decl(%struct.ccdigest_info* %7, i32 %8)
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_crypto_funcs, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32 (%struct.ccdigest_info*, i32)*, i32 (%struct.ccdigest_info*, i32)** %11, align 8
  %13 = load %struct.ccdigest_info*, %struct.ccdigest_info** %3, align 8
  %14 = load i32, i32* @di_ctx, align 4
  %15 = call i32 %12(%struct.ccdigest_info* %13, i32 %14)
  %16 = load %struct.ccdigest_info*, %struct.ccdigest_info** %3, align 8
  %17 = load i32, i32* @di_ctx, align 4
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @DiToSHA1(%struct.ccdigest_info* %16, i32 %17, i32* %18)
  ret void
}

declare dso_local i32 @ccdigest_di_decl(%struct.ccdigest_info*, i32) #1

declare dso_local i32 @DiToSHA1(%struct.ccdigest_info*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
